# payment-plan-python-sdk

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
payment_plan/: __init__.py
payment_plan/_internal/: payment_plan_uniffi.py
payment_plan_python_sdk.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_payment_plan.py
