[project]
name = "payment-plan-python-sdk"
version = "3.2.0"
description = "A Python SDK for Lara Payment Plan, a wrapper around the Lara Payment Plan Rust library."
authors = [
    { name = "Parcelado Lara", email = "it-group@lara.app.br" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: Other/Proprietary License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows'
]

[tool.setuptools]
packages = ["payment_plan", "payment_plan._internal"]